Feature #2715 The JPA entities are now correctly mapped

--- a/config-core/src/main/config/properties/com/silverpeas/sharing/multilang/fileSharingBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/sharing/multilang/fileSharingBundle_en.properties
@@ -36,7 +36,7 @@ sharing.operation = Operations
 sharing.updateTicket = Update a ticket
 sharing.createTicket = Create a ticket
 sharing.deleteTicket = Delete a ticket
-sharing.fileId = File ID
+sharing.sharedObjectId = File ID
 sharing.componentId = Application id
 sharing.versioning = Versioning
 sharing.creationDate = Create
@@ -45,7 +45,7 @@ sharing.updateDate = Update
 sharing.endDate = End of validity
 sharing.nbAccessMax = maximum number of accesses
 sharing.nbAccess = Number of accesses
-sharing.keyFile = Key
+sharing.token = Key
 sharing.confirmTicket = Our ticket
 sharing.confirmDeleteTicket = Do you really want to delete the ticket?
 sharing.downloadDate = Download on
