--- a/config-core/src/main/config/properties/com/silverpeas/sharing/multilang/fileSharingBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/sharing/multilang/fileSharingBundle_fr.properties
@@ -36,7 +36,7 @@ sharing.operation = Op\u00e9rations
 sharing.updateTicket = Mettre \u00e0 jour un ticket
 sharing.createTicket = Cr\u00e9er un ticket
 sharing.deleteTicket = Supprimer un ticket
-sharing.fileId = Id du fichier
+sharing.sharedObjectId = Id du fichier
 sharing.componentId = Id de l'application
 sharing.versioning = Versioning
 sharing.creationDate = Cr\u00e9\u00e9 le
@@ -45,7 +45,7 @@ sharing.updateDate = modifi\u00e9 le
 sharing.endDate = Date de fin de validit\u00e9
 sharing.nbAccessMax = Nombre d'acc\u00e8s maximum
 sharing.nbAccess = Nombre d'acc\u00e8s
-sharing.keyFile = cl\u00e9
+sharing.token = cl\u00e9
 sharing.confirmTicket = Votre ticket
 sharing.confirmDeleteTicket = Etes vous s\u00fbr de vouloir supprimer le ticket
 sharing.downloadDate = t\u00e9l\u00e9charg\u00e9 le
