Feature #2829. The integration of the Aurore's work is finished. By the process, some additional JQuery plugins were introduced: smartpaginator to paginate a list of items and breadcrumb, a custom breadcrumb trail implementation, to render the current navigation trail of the user. Beside that, a silverpeas-profile.js javascript file was also created to manage both the user groupsand the user profiles in client side (for instance if provides only the functionalities required by the user panel , nevertheless it can be extended to cover other requirements)

--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_de.properties
@@ -22,21 +22,29 @@
 
 selection.UserSelectionPanel=Auswahl von Benutzern
 selection.Filter=Filtern nach
-selection.groupFound=gruppen gefunden
+selection.groupFound=gruppe gefunde
 selection.AddToSelection=Zur Auswahl hinzuf\u00fcgen
-selection.AllUsers=Alle Benutzer
+selection.AllUsers=Alle Benutzern
 selection.RootUserGroups=Benutzergruppen
-selection.searchUserGroups=suche Gruppe
+selection.searchUserGroups=Suchen Gruppen
 selection.AddAllGroups=F\u00fcgen Sie alle Gruppen
 selection.AddAllGroupsToSelection=F\u00fcgen Sie alle Gruppen in der Auswahl
-selection.SelectedUsersAndGroups=Ausgew\u00e4hlte Benutzer und Gruppen
-selection.groupSelected=ausgew\u00e4hlten Gruppen
-selection.userSelected=ausgew\u00e4hlten Benutzer
+selection.SelectedUsersAndGroups=Ausgew\u00e4hlte
+selection.groupSelected=ausgew\u00e4hlte Gruppe
+selection.userSelected=ausgew\u00e4hlte Benutzer
 selection.RemoveFromSelection=Entfernen Sie eine beliebige Auswahl
 selection.Empty=Leer
 selection.RemoveAllGroupsFromSelection=Entfernen Sie alle Gruppen in der Auswahl
-selection.searchUsers=Benutzer Forschungs
-selection.userFound=benutzer gefunden
-selection.AddAllUsersToSelection=F\u00fcgen Sie alle Benutzer in der Auswahl
-selection.AddAllUsers=F\u00fcgen Sie alle Benutzer
-selection.RemoveAllUsersFromSelection=Entfernen Sie alle Benutzer in der Auswahl
+selection.searchUsers=Suchen Benutzern
+selection.userFound=benutzer gefunde
+selection.AddAllUsersToSelection=F\u00fcgen Sie alle Benutzern in der Auswahl
+selection.AddAllUsers=F\u00fcgen Sie alle Benutzern
+selection.RemoveAllUsersFromSelection=Entfernen Sie alle Benutzern in der Auswahl
+selection.selectedUsers=Ausgew\u00e4hlten Benutzern
+selection.selectedGroups=Ausgew\u00e4hlten Gruppen
+selection.groupsSelected=ausgew\u00e4hlten Gruppen
+selection.usersSelected=suchen Benutzern
+selection.groupsFound=gruppen gefunden
+selection.usersFound=benutzern gefunden
+selection.SelectedUsers=Ausgew\u00e4hlte
+selection.SelectedGroups=Ausgew\u00e4hlte
