--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_en.properties
@@ -21,22 +21,30 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 selection.UserSelectionPanel=User Selection
-selection.Filter=Filter by
-selection.groupFound=group(s) found
+selection.Filter=Filters
+selection.groupFound=group found
 selection.AddToSelection=Add to selection
 selection.AllUsers=All the users
 selection.RootUserGroups=Groups
 selection.searchUserGroups=search groups
 selection.AddAllGroups=Add all the groups
 selection.AddAllGroupsToSelection=Add all the groups to selection
-selection.SelectedUsersAndGroups=Selected users and groups
-selection.groupSelected=selected group(s)
-selection.userSelected=selected user(s)
+selection.SelectedUsersAndGroups=Selection
+selection.groupSelected=selected group
+selection.userSelected=selected user
 selection.RemoveFromSelection=Remove from selection
 selection.Empty=Empty
 selection.RemoveAllGroupsFromSelection=Remove all the groups from selection
 selection.searchUsers=search users
-selection.userFound=user(s) found
+selection.userFound=user found
 selection.AddAllUsersToSelection=Add all the users to selection
 selection.AddAllUsers=Add all users
 selection.RemoveAllUsersFromSelection=Remove all the users from selection
+selection.selectedUsers=Selected users
+selection.selectedGroups=Selected groups
+selection.groupsSelected=selected groups
+selection.usersSelected=selected users
+selection.groupsFound=groups found
+selection.usersFound=users found
+selection.SelectedUsers=Selection
+selection.SelectedGroups=Selection
