--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -319,8 +319,8 @@ GML.Show = Show:
 GML.selectAValue = Please select a value
 
 GML.Validation = Validation
-GML.pagination.FirstPage=First page
-GML.pagination.LastPage=Last page
-GML.pagination.ScrollNextPages=>>
-GML.pagination.ScrollPreviousPages=<<
+GML.pagination.FirstPage=<<
+GML.pagination.LastPage=>>
+GML.pagination.ScrollNextPages=>
+GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Page
