--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -316,8 +316,8 @@ GML.Show = Zeigen:
 GML.selectAValue = Bitte w\u00e4hlen Sie einen Wert
 
 GML.Validation = Best\u00e4tigung
-GML.pagination.FirstPage=Erste Seite
-GML.pagination.LastPage=Letzte Seite
-GML.pagination.ScrollNextPages=>>
-GML.pagination.ScrollPreviousPages=<<
+GML.pagination.FirstPage=<<
+GML.pagination.LastPage=>>
+GML.pagination.ScrollNextPages=>
+GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Seite
