Feature #2829. Add a new filter in the user panel to fetchs the user's relationships (its contacts within the Silverpeas social network)

--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_de.properties
@@ -48,3 +48,4 @@ selection.groupsFound=gruppen gefunden
 selection.usersFound=benutzern gefunden
 selection.SelectedUsers=Ausgew\u00e4hlte
 selection.SelectedGroups=Ausgew\u00e4hlte
+selection.MyContacts=Meine Kontakte
