--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_en.properties
@@ -48,3 +48,4 @@ selection.groupsFound=groups found
 selection.usersFound=users found
 selection.SelectedUsers=Selection
 selection.SelectedGroups=Selection
+selection.MyContacts=My contacts
