Feature #2829. Fix the last discovered issues and improve the user search by using the UserDAO instead of the ugly UserTable

--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_de.properties
@@ -49,3 +49,4 @@ selection.usersFound=benutzern gefunden
 selection.SelectedUsers=Ausgew\u00e4hlte
 selection.SelectedGroups=Ausgew\u00e4hlte
 selection.MyContacts=Meine Kontakte
+selection.SelectedUserOrGroup=einzigartigen Auswahl
