--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_en.properties
@@ -49,3 +49,4 @@ selection.usersFound=users found
 selection.SelectedUsers=Selection
 selection.SelectedGroups=Selection
 selection.MyContacts=My contacts
+selection.SelectedUserOrGroup=Unique selection
