fixing bug #3040 Taking into account new format of xmlcomponent and new subdirectory of workflows Simplifying generation of xmlcomponent (removing editComponentDescriptor.jsp) Removing a lot of Java warnings Adding integration tests

--- a/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_en.properties
@@ -33,9 +33,6 @@ instance of which might be executed by the Workflow Engine. \\n\
 Do you really want to continue?   
 workflowDesigner.Either = Either
 workflowDesigner.or = or
-workflowDesigner.editor.componentDescriptor = Generating the application descriptor 
-workflowDesigner.component.parameters = Please enter descriptor attributes:
-workflowDesigner.component.labelSelection = Please select the language of the profiles' labels:
 
 # Tab names
 workflowDesigner.actions = Actions
@@ -195,7 +192,7 @@ User Data represents user's directory.
 workflowDesigner.help.toolName = Workflow Designer is a tool that: <ul>\
 <li>Allows quick and intuitive modification of workflow model.</li>\
 <li>Guarantees the validity of the resulting model.</li>\
-<li>Can automatically generate an application descriptor corresponding to the model.</li>\
+<li>Can automatically generate application descriptor corresponding to the model.</li>\
 <li>Allows modifying a workflow that is being executed.</li></ul>
 
 workflowDesigner.help.workflowHeader = This screen allows: <ul> \
