--- a/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_fr.properties
@@ -31,9 +31,6 @@ workflowDesigner.confirmRemoveJS = Voulez-vous vraiment supprimer l\\'élément :
 workflowDesigner.confirmProcessReferencedJS = Attention !\\nVous êtes en train de modifier un modèle abstrait de processus \\nqui peut être exécuté dans le moteur de Workflow. \\nVoulez-vous continuer ?   
 workflowDesigner.Either = Ou
 workflowDesigner.or = ou
-workflowDesigner.editor.componentDescriptor = Génération d'un descriptif de l'application 
-workflowDesigner.component.parameters = Veuillez saisir les paramètres du descriptif :
-workflowDesigner.component.labelSelection = Veuillez choisir les libellés pour les profiles du descriptif :
 
 # Tab names
 workflowDesigner.actions = Actions
@@ -113,7 +110,7 @@ workflowDesigner.add.state = Ajouter un &eacute;tat
 workflowDesigner.add.title = Ajouter un titre
 workflowDesigner.addWorkflow = Ajouter un workflow
 workflowDesigner.importWorkflow = Importer un workflow
-workflowDesigner.generate.componentDescriptor = Générer un descriptif de l'application
+workflowDesigner.generate.componentDescriptor = Générer le descripteur de l'application
 
 # Filed & column names
 workflowDesigner.action = Action
@@ -194,7 +191,7 @@ d'une instance de ce modèle de procédure. C'est le dossier personnel d'un utilis
 workflowDesigner.help.toolName = Editeur de workflow est un outil qui permet de : <ul>\
 <li>Modifier facilement le modèle abstrait de procédure.</li>\
 <li>Assurer la validité du modèle.</li>\
-<li>Créer automatiquement un descriptif de l'application.</li>\
+<li>Créer automatiquement le descripteur de l'application.</li>\
 <li>Modifier un modèle de procédure qui est exécuté.</li></ul>
 
 workflowDesigner.help.workflowHeader = Cet écran permet de : <ul>\
