Feature #2829 Improve the look of the user panel and fixe last discovered bugs

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -324,3 +324,4 @@ GML.pagination.LastPage=>>
 GML.pagination.ScrollNextPages=>
 GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Page
+GML.internalDomain=Shared domain
