--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -327,3 +327,4 @@ GML.pagination.LastPage=>>
 GML.pagination.ScrollNextPages=>
 GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Page
+GML.internalDomain=Domaine mixte
