--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -321,3 +321,4 @@ GML.pagination.LastPage=>>
 GML.pagination.ScrollNextPages=>
 GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Seite
+GML.internalDomain=Gemischte Domain
