On feature #3060, start by managing new parameter "Facet" on fields

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -60,6 +60,7 @@ templateDesigner.login = Login f\u00fcr die Verbindung zur Datenbank
 templateDesigner.passwordDB = Passwort f\u00fcr die Verbindung zur Datenbank
 templateDesigner.query = SQL-Abfrage
 templateDesigner.suggestions = Vorschl\u00e4ge
+templateDesigner.facet = Facette
 
 templateDesigner.js.incorrectName = must not be called 'name'. Use a more meaningful name.
 
