--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -58,6 +58,7 @@ templateDesigner.login = Login de connexion \u00e0 la base
 templateDesigner.passwordDB = Mot de passe de connexion \u00e0 la base
 templateDesigner.query = Requ\u00eate SQL de recherche
 templateDesigner.suggestions = Suggestions
+templateDesigner.facet = Facette
 
 templateDesigner.js.incorrectName = ne doit pas se nommer 'name'. Utilisez un nom plus explicite.
 
