--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -58,6 +58,7 @@ templateDesigner.login = Login connection to the database
 templateDesigner.passwordDB = Password connection to the database
 templateDesigner.query = SQL search request
 templateDesigner.suggestions = Suggestions
+templateDesigner.facet = Facet
 
 templateDesigner.js.incorrectName = must not be called 'name'. Use a more meaningful name.
 
