on feature #2715, integrating Manu's work (sharable resources management) Adapting look and feel to new type of resource (folders)

--- a/config-core/src/main/config/properties/com/silverpeas/sharing/multilang/fileSharingBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/sharing/multilang/fileSharingBundle_en.properties
@@ -47,12 +47,12 @@ sharing.nbAccessMax = maximum number of accesses
 sharing.nbAccess = Number of accesses
 sharing.token = Key
 sharing.confirmTicket = Our ticket
-sharing.confirmDeleteTicket = Do you really want to delete the ticket?
+sharing.confirmDeleteTicket = Do you really want to delete this ticket?
 sharing.downloadDate = Download on
 sharing.IP = IP
 fileSharing = Access URL:
 sharing.expiredTicket = Expired ticket
-sharing.nameFile = File name
+sharing.nameFile = File
 sharing.sizeFile = Size
 sharing.downloadLink = Link to the file to download
 sharing.ticketNotValid = This ticket is not valid
@@ -61,3 +61,4 @@ sharing.maxValue = must be between
 sharing.shareFile = share the following file:
 sharing.downloadFileHelp = To directly download the file,<br/> do a <b>right click then Save as... </b>
 sharing.continuous = Continuous
+sharing.nodeName = Folder
