--- a/config-core/src/main/config/properties/com/silverpeas/sharing/multilang/fileSharingBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/sharing/multilang/fileSharingBundle_fr.properties
@@ -45,7 +45,7 @@ sharing.updateDate = modifi\u00e9 le
 sharing.endDate = Date de fin de validit\u00e9
 sharing.nbAccessMax = Nombre d'acc\u00e8s maximum
 sharing.nbAccess = Nombre d'acc\u00e8s
-sharing.token = cl\u00e9
+sharing.token = Cl\u00e9
 sharing.confirmTicket = Votre ticket
 sharing.confirmDeleteTicket = Etes vous s\u00fbr de vouloir supprimer le ticket
 sharing.downloadDate = t\u00e9l\u00e9charg\u00e9 le
@@ -61,3 +61,4 @@ sharing.maxValue = doit \u00eatre compris entre
 sharing.shareFile = a choisi de partager le fichier&nbsp;:
 sharing.downloadFileHelp = Pour t\u00e9l\u00e9charger directement le fichier, <br/>faites un <b>clic droit > Enregistrer la cible sous ... </b>
 sharing.continuous = Permanent
+sharing.nodeName = Th\u00e8me
