--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -109,6 +109,8 @@ templateDesigner.displayer.video.autoplay = Autoplay
 
 templateDesigner.displayer.wysiwyg.width = Width
 templateDesigner.displayer.wysiwyg.height = Height
+templateDesigner.displayer.wysiwyg.galleries = Galleries
+templateDesigner.displayer.wysiwyg.fileStorages = Files stores
 
 templateDesigner.displayer.sequence.minLength = Min length
 templateDesigner.displayer.sequence.startValue = Start value
