closing search part of feature #3060 :  - facets are correctly displayed  - facets management has been simplified

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -272,10 +272,10 @@ pdcPeas.Axe = Achse
 pdcPeas.selectAll=Alles ausw\u00e4hlen
 
 # Facet group search message
-pdcPeas.group.author= Author	  	 
-pdcPeas.group.service= Service
-pdcPeas.group.tooltip.enable= Klicken Sie hier um die Suche auf {0} zu verfeinern
-pdcPeas.group.tooltip.disable= Klicken Sie hier um den Suchfilter auf {0} zu l\u00f6schen
+pdcPeas.facet.author= Author	  	 
+pdcPeas.facet.service= Service
+pdcPeas.facet.tooltip.enable= Klicken Sie hier um die Suche auf * zu verfeinern
+pdcPeas.facet.tooltip.disable= Klicken Sie hier um den Suchfilter auf * zu l\u00f6schen
  
 pdcPeas.popularity = * Mal konsultiert
 pdcPeas.external.search.label=Externer Server :
