--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -281,10 +281,10 @@ pdcPeas.selectAll=Select all
 pdcpeas.didYouMean= Did You mean  :
 
 # Facet group search message
-pdcPeas.group.author= Author
-pdcPeas.group.service= Application
-pdcPeas.group.tooltip.enable= Click to show only '{0}' results
-pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results
+pdcPeas.facet.author= Author
+pdcPeas.facet.service= Application
+pdcPeas.facet.tooltip.enable= Click to show only '*' results
+pdcPeas.facet.tooltip.disable= Click to cancel '*' filter results
 
 pdcPeas.popularity = * views
 
