closing feature #3060 managing facet activation/inactivation

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -59,6 +59,7 @@ templateDesigner.passwordDB = Password connection to the database
 templateDesigner.query = SQL search request
 templateDesigner.suggestions = Suggestions
 templateDesigner.facet = Facet
+templateDesigner.facet.warning = For the facet appears in the list of search results, you must manually re-index all applications that use this form.
 
 templateDesigner.js.incorrectName = must not be called 'name'. Use a more meaningful name.
 
