--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -61,6 +61,7 @@ templateDesigner.passwordDB = Passwort f\u00fcr die Verbindung zur Datenbank
 templateDesigner.query = SQL-Abfrage
 templateDesigner.suggestions = Vorschl\u00e4ge
 templateDesigner.facet = Facette
+templateDesigner.facet.warning = For the facet appears in the list of search results, you must manually re-index all applications that use this form.
 
 templateDesigner.js.incorrectName = must not be called 'name'. Use a more meaningful name.
 
