update feature #2403, add javascript date format inside common date properties

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_en.properties
@@ -26,6 +26,7 @@
 dateInputFormat = MM/dd/yyyy
 dateOutputFormat = MM/dd/yyyy
 hourOutputFormat = HH:mm
+date.format.javascript = mm/dd/yy
 
 # jour
   weekFirstDay = 2
