Feature #3180 : handle expired password for Active Directory domain Handle expired password on authentication on Active Directory domain Throw exception when trying to change password on an Active Directory with a non-secure connection

--- a/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication_en.properties
@@ -54,5 +54,6 @@ authentication.password.length = (at least * characters)
 authentication.password.length.alert = Your password must contain at least * characters
 authentication.password.different = The answer and confirmation are not the same
 authentication.password.aboutToExpire = Your password is about to expire. It is strongly recommended to change it as soon as possible.
+authentication.password.expired = Your password has expired. You must change it to access the application.
 authentication.password.change = Change password
 authentication.password.remindMeLater = Remind me later
