--- a/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication_en.properties
@@ -29,15 +29,17 @@ authentication.logon.password = Password
 authentication.logon.domain = Domain
 authentication.logon.passwordForgotten = Have you forgotten your password ?
 authentication.logon.passwordRemember = Remember the password ?
+authentication.logon.newRegistration = New user ? Register yourself
 authentication.logon.loginMissing = Please enter your login
 authentication.logon.passwordReinit = Give me a new password...
-authentication.logon.socialNetworkLogin = Or connect via
+authentication.logon.socialNetworkLogin = Connect via
 
 # login errors
 authentication.logon.1 = Login or password incorrect
 authentication.logon.2 = Technical problem
 authentication.logon.3 = Your session has expired
 authentication.logon.4 = You are not logged on
+authentication.logon.5 = No account linked to your social network account
 
 authentication.reminder.label = Please answer the personal question below
 authentication.reminder.noQuestion = You have not yet chosen a personal question. If you forget your password, this question will allow you to reset it.
@@ -57,3 +59,19 @@ authentication.password.different = The answer and confirmation are not the same
 authentication.password.aboutToExpire = Your password is about to expire. It is strongly recommended to change it as soon as possible.
 authentication.password.change = Change password
 authentication.password.remindMeLater = Remind me later
+
+registration.title = Registration
+registration.noSilverpeasAccount = You don't have yet created an account
+registration.completeProfile = Please fill in your profile to register
+registration.firstname = First name
+registration.lastname = Last name
+registration.email = Email
+registration.firstNameRequired = The field 'First Name' is mandatory
+registration.lastNameRequired = The field 'Last Name' is mandatory
+registration.emailRequired = The field 'Email' is mandatory
+registration.emailBadSyntax = The field 'Email' contains incorrect value
+registration.alreadyRegistered = This email is already in use
+registration.succesTitle = Registration finished
+registration.success = You are now registered into the platform. Your credentials have been sent to you by mail.
+registration.failedTitle = Registration failure
+registration.failed = New user registration has failed
