Feature #3110 : adding the core system of the delayed notifications

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
@@ -59,3 +59,17 @@ testMsgFrom=silverpeas@silverpeas.com
 guestNotAllowedTitle=Benachrichtigung unm\u00f6glich!
 guestNotAllowedBody1=Senden der Benachrichtigung unm\u00f6glich: 
 guestNotAllowedBody2=Leider k\u00f6nnen Sie als Eingeladene(r) keine Benachrichtigunhg senden.
+
+# Definitions about delayed notifications
+frequencyDAILY=T\u00e4glich
+frequencyWEEKLY=W\u00f6chentlich
+frequencyMONTHLY=Monatlich
+
+delayDAILY=ein Tag
+delayWEEKLY=eine Woche
+delayMONTHLY=eine Monat
+
+resourceActionCREATE=erstellt
+resourceActionUPDATE=aktualisiert
+resourceActionDELETE=entfernt
+resourceActionREPORT=berichtet
