--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
@@ -59,3 +59,17 @@ testMsgFrom=silverpeas@silverpeas.com
 guestNotAllowedTitle=Impossible to notify!
 guestNotAllowedBody1=Impossible to send the notification:
 guestNotAllowedBody2=Sorry, you can't notify as a guest.
+
+# Definitions about delayed notifications
+frequencyDAILY=daily
+frequencyWEEKLY=weekly
+frequencyMONTHLY=monthly
+
+delayDAILY=one day
+delayWEEKLY=one week
+delayMONTHLY=one month
+
+resourceActionCREATE=created
+resourceActionUPDATE=updated
+resourceActionDELETE=deleted
+resourceActionREPORT=reported
