Feature #3111. Add the support of the i18n in JQuery (with the i18n JQery plugin communicating with the REST service BundleResource to get the localized resource bundles). The silverpeas plugin userZoom manages now its own popup rendering atop of the JQuery windowing mechanism. The silverpeas userZoom plugin works now correctly with the comment service but some works have to do in the stylesheet

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -98,3 +98,6 @@ profil.subnav.identity=Identity
 invitation.send = Send an invitation
 
 myProfile.status.timeout = Your session has expired. Your status could not be saved.
+tchat=Tchat
+connected=connected
+notConnected=not connected
